public class Cook
{
	public void makeBurger()
	{
		System.out.println("Making a burger");
	}

	public void makeFries()
	{
		System.out.println("Making fries");
	}
}
