@FunctionalInterface
public interface Order
{
	public void execute();
}
